<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.strawpoll.ui.create.CreateViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.create.CreateFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/startStrawpollButton"
            android:textAlignment="center"
            android:textColor="@color/buttonColor"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/pollQuestion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/questionHint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={viewModel.question}"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/createButton"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> viewModel.onSubmit()}"
            android:text="@string/createButton"
            android:textColor="@android:color/white"
            android:textIsSelectable="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!--<androidx.recyclerview.widget.RecyclerView
            android:id="@+id/answer_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/createButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pollQuestion"
            app:layout_constraintVertical_bias="0.0" />-->

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@+id/createButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pollQuestion"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/answerList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="3."
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/editText3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText2" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/answerHint"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.answer1}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/answerHint"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.answer2}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@+id/editText" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/answerHint"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.answer3}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/editText2" />

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/answerHint"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.answer4}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/editText3" />

                <EditText
                    android:id="@+id/editText5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/answerHint"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.answer5}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/editText4" />

                <EditText
                    android:id="@+id/editText6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/answerHint"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.answer6}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView10"
                    app:layout_constraintTop_toBottomOf="@+id/editText5" />

                <EditText
                    android:id="@+id/editText7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/answerHint"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.answer7}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView11"
                    app:layout_constraintTop_toBottomOf="@+id/editText6" />

                <EditText
                    android:id="@+id/editText8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/answerHint"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.answer8}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView12"
                    app:layout_constraintTop_toBottomOf="@+id/editText7" />

                <EditText
                    android:id="@+id/editText9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/answerHint"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.answer9}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView13"
                    app:layout_constraintTop_toBottomOf="@+id/editText8" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="1."
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/editText"
                    app:layout_constraintEnd_toStartOf="@+id/editText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/editText" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="2."
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/editText2"
                    app:layout_constraintEnd_toStartOf="@+id/editText2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/editText2" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="4."
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/editText4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/editText4" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="5."
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/editText5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText4" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="6."
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/editText6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText5" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="7."
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/editText7"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/editText7" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="8."
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/editText8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/editText8" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="9."
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/editText9"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/editText9" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>